Enhance UI/UX and fix bugs